...
    <item
        android:id="@+id/menu_button1"
        android:title="Pagrindinis"
        android:icon="@drawable/home" />

    <item
        android:id="@+id/menu_button2"
        android:title="Statistika"
        android:icon="@drawable/stats" />

    <item
        android:id="@+id/menu_button5"
        android:title="Tikslai"
        android:icon="@drawable/target" />
...
