...
                    android:layout_weight="3"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/categoryButton"
                    android:layout_width="0dp"
                    android:layout_height="29dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/round_button_background"
                    android:text="Sukurti nauja"
                    android:textAllCaps="false"
...
