...
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/appUsageButton"
                        android:layout_width="120dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/round_button_background"
                        android:text="Išsaugoti"
                        android:textAllCaps="false"
...
