...
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:text="Naudojimo istorija"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/appHistoryButton"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/appHistoryButton"
...
